Fix dropdown alignment using CSS calc

--- a/cw-token-field.css
+++ b/cw-token-field.css
@@ -35,11 +35,11 @@ cw-options-list {
   border: 1px solid #aaa;
   border-top: 0;
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.15);
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
   position: absolute;
-  top: 100%;
+  top: calc(100% + 1px);
+  left: -1px;
   width: 100%;
 }
 
